# DankGPT

./: .gitignore  GPTDataset.py  README.md  main.py  pyproject.toml  scrapeOnlineTextContent.py
configs/: __init__.py  gpt2_large.py  gpt2_medium.py  gpt2_xlarge.py  gpt_config_124m.py
scripts/: chat.py  download_dataset_spam.py  gpt_download.py  load_gpt2_model.py  perform_tests.py  prepare_data.py  test_GELUvReLU.py  test_attention.py  test_causalattention.py  test_multiheadattention.py  test_normalizationlayer.py  test_placeholdergpt.py  test_queue_listener.py  test_selfattention.py  train.py
scripts/tests/: test_GELUvReLU.py  test_classification.py  test_config.py  test_dataframe.py  test_generatetext.py  test_gpt2sizemultihead.py  test_gptmodel.py  test_load_openai_weights.py  test_logging.py  test_loss_gpt2_small.py  test_multiheadattention.py  test_normalizationlayer.py  test_selfattention.py  test_temperaturescaling.py  test_train.py  test_transformer.py  test_wrappedmultiheadattention.py
src/config/: __init__.py  logging.py  logging_config.json  models.py  paths.py  training.py
src/llm/: __init__.py
src/llm/config/: __init__.py
src/llm/data/: __init__.py  classification.py  dataset.py  importer.py  loader.py
src/llm/generation/: __init__.py  generator.py
src/llm/models/: __init__.py  causalattention.py  embeddings.py  feedforward.py  gptmodel.py  normalization.py  placeholdergptmodel.py  selfattention.py  transformer.py
src/llm/training/: __init__.py  trainer.py
src/llm/utils/: __init__.py  checkpoint.py  classification.py  device.py  logging.py  (+4 more)
